src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws1-wfsA1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nwant fullscreen: A1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
